scrollbars fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width:375px) {
     .parent-flex {
         display:flex;
@@ -20,8 +21,8 @@
         /* width: 65%;
         height:45%;*/
         max-width: 65%;
-        height: auto;
         display: block;
+        height: auto;
     }
     #desc {
         display:flex;
@@ -48,7 +49,7 @@
         margin:12px; */
         flex-direction:row;
         gap:5px;
-        justify-content:space-around;
+        justify-content:center;
         align-items:center;
     }
     #email {
@@ -72,7 +73,7 @@
 
     #ico {
         width: 75%;
-        height:100%;
+        /* height:100%; */
         text-align: center;
         overflow-x: hidden;
         overflow-y: auto;
@@ -110,8 +111,8 @@
         /* width: 65%;
         height:45%;*/
         max-width: 65%;
-        height: auto;
         display: block;
+        height: auto;
     }
     #desc {
         display:flex;
@@ -138,7 +139,7 @@
         margin:12px; */
         flex-direction:row;
         gap:5px;
-        justify-content:space-around;
+        justify-content:center;
         align-items:center;
     }
     #email {
@@ -162,7 +163,7 @@
 
     #ico {
         width: 75%;
-        height:100%;
+        /* height:100%; */
         text-align: center;
         overflow-x: hidden;
         overflow-y: auto;
@@ -171,7 +172,7 @@
         width: 100%;
         height:100vh;
         overflow-x:hidden;
-        overflow-y:auto;
+        overflow-y:hidden;
         position: fixed;
         z-index: -100;
         background-image: linear-gradient(white, rgb(128, 126, 126));
